You can now create a user

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -6,6 +6,12 @@
 </head>
 
 <body>
+
+  <a href="/">Home</a>
+  <a href="/register">Register</a>
+  <a href="/login">Log In</a>
+
+
   <p>Hello and Welcome!</p>
 </body>
 
