Redirect and some html cleanup

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-
-</head>
-
-<body>
-
-  <a href="/">Home</a>
-  <a href="/register">Register</a>
-  <a href="/login">Log In</a>
-
-
-  <p>Hello and Welcome!</p>
-</body>
-
-</html>
+{% extends "base.html" %}
