--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -1,57 +1,43 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html>
+{% block content %}
+<form action="/api/register" method="post">
+  <ul>
 
-<head>
-</head>
+    <li>
 
-<body>
+      <label for="emailInput">Email: </label>
+      <input type="email" name="emailInput" id="emailInput" />
 
-  <a href="/">Home</a>
-  <a href="/register">Register</a>
-  <a href="/login">Log In</a>
+    </li>
 
+    <li>
 
-  <form action="/api/register" method="post">
-    <ul>
+      <label for="userInput">Username: </label>
+      <input type="text" name="userInput" id="userInput" />
 
-      <li>
+    </li>
 
-        <label for="emailInput">Email: </label>
-        <input type="email" name="emailInput" id="emailInput" />
+    <li>
 
-      </li>
+      <label for="dateInput">Date of birth: </label>
+      <input type="date" name="dateInput" id="dateInput" />
 
-      <li>
+    </li>
 
-        <label for="userInput">Username: </label>
-        <input type="text" name="userInput" id="userInput" />
+    <li>
 
-      </li>
+      <label for="passwordInput">Password: </label>
+      <input type="password" name="passwordInput" id="passwordInput" />
 
-      <li>
+    </li>
 
-        <label for="dateInput">Date of birth: </label>
-        <input type="date" name="dateInput" id="dateInput" />
+    <li>
 
-      </li>
+      <input type="submit" name="" value="Register" />
 
-      <li>
+    </li>
 
-        <label for="passwordInput">Password: </label>
-        <input type="password" name="passwordInput" id="passwordInput" />
-
-      </li>
-
-      <li>
-
-        <input type="submit" name="" value="Register" />
-
-      </li>
-
-    </ul>
-  </form>
-
-</body>
-
-</html>
+  </ul>
+</form>
+{% endblock content %}
