--- a/code/templates/login.html
+++ b/code/templates/login.html
@@ -1,32 +1,19 @@
-<!DOCTYPE html>
+{%extends "base.html" %}
 
-<html>
-
-<head>
-
-</head>
-
-<body>
-
-  <a href="/">Home</a>
-  <a href="/register">Register</a>
-  <a href="/login">Log In</a>
-
-  <form action="/api/login" method="post">
-    <ul>
-      <li>
-        <label for="emailInput">Email:</label>
-        <input type="email" name="emailInput">
-      </li>
-      <li>
-        <label for="passwordInput">Password:</label>
-        <input type="password" name="passwordInput">
-      </li>
-      <li>
-        <input type="submit" value="Log In">
-      </li>
-    </ul>
-  </form>
-</body>
-
-</html>
+{% block content %}
+<form action="/api/login" method="post">
+  <ul>
+    <li>
+      <label for="emailInput">Email:</label>
+      <input type="email" name="emailInput">
+    </li>
+    <li>
+      <label for="passwordInput">Password:</label>
+      <input type="password" name="passwordInput">
+    </li>
+    <li>
+      <input type="submit" value="Log In">
+    </li>
+  </ul>
+</form>
+{% endblock content %}
